Colab을 통해 생성됨

--- a/Ch04_task(code).ipynb
+++ b/Ch04_task(code).ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/yunun0410/python_assignment/blob/main/Ch04_task(code).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "WXEwMsfUct7U"
       },
       "source": [
@@ -548,7 +558,6 @@
         "보물을 찾았습니다.\n",
         "\n",
         "\n",
-        "![image.png](attachment:image.png)\n",
         "\n",
         "\n",
         "\n",
@@ -632,7 +641,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
