--- a/Chapter1720_task.ipynb
+++ b/Chapter1720_task.ipynb
@@ -53,13 +53,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 56,
       "metadata": {
         "id": "PTqEeebbLmCA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "42093b9a-e6f7-418d-955d-875557cece01"
+        "outputId": "ad72afeb-e260-43c9-ca7f-13f3cd114d78"
       },
       "outputs": [
         {
@@ -75,12 +75,12 @@
       "source": [
         "print_even = ([1,3,2,10,12,11,15])\n",
         "\n",
-        "def print_score(print_even):\n",
+        "def print_score():\n",
         "    for i in print_even:\n",
         "        if i % 2 == 0:\n",
         "            print(i)\n",
         "\n",
-        "print_score(print_even)"
+        "print_score()"
       ]
     },
     {
